--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
         "@testing-library/user-event": "^7.1.2",
         "react": "^16.12.0",
         "react-dom": "^16.12.0",
-        "react-scripts": "3.3.0",
+        "react-scripts": "^3.4.1",
         "typeface-roboto": "^0.0.75",
-        "uuid": "^3.3.3"
+        "uuid": "^3.3.3",
+        "web-vitals": "^1.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
